client/style/style.css
body, html {
  height: 100%;
}

label {
  display: none;
}

.login-bar {
  position: absolute;
  background-color: #292b2c;
  width: 100%;
  height:20%;
}
.login-logo {
  height: 70%;
  top: 65%;
  position: absolute;
  left: 50%;
  transform: translateX(-50%);
}
.btn-signin {
  background-color: #292b2c;
  color: white;
}
.btn-signin:hover {
  background-color: #474a4c;
}

.logo {
  position: absolute;
  left: 10%;
  height: 109px;
}

@media (max-width: 575px) { 
  .logo {
    left:40%;
  }
}

.navbar-toggler {
  background-color: #292b2c;
}
.navbar-brand {
  height: 50px;
}

.nav-tabs {
  cursor: pointer;
}

.App-header {
  background-color: black;
  height: 80px;
  margin-bottom: 50px;
  padding: 20px;
  color: white;
  text-align: center;
}

.calendar-date-name {
  margin-top: -0.75rem;
  margin-left: -0.5rem;
}

.calendar-date-header {
  width: 14.3%;
}

.calendar-date-field {
  min-height: 2em;
}

.comment .comment-delete {
  visibility: hidden;
  z-index: 1;
}

.comment:hover .comment-delete {
  visibility: visible;
}

.csstooltip {
    position: relative;
    display: inline-block;
    cursor: pointer;
}
.csstooltiptext {
  font-size: 0.7rem;
}

.csstooltip .csstooltiptext {
    visibility: hidden;
    width: 100px;
    background-color: black;
    color: #fff;
    text-align: center;
    border-radius: 6px;
    padding: 5px 0;
    bottom: 100%;
    left: 50%; 
    margin-left: -50px;
    position: absolute;
    z-index: 1;
    opacity: 0.6;
}

.csstooltip:hover .csstooltiptext {
    visibility: visible;
}

.csstooltip .csstooltiptext::after {
    content: " ";
    position: absolute;
    top: 100%; /* At the bottom of the tooltip */
    left: 50%;
    margin-left: -5px;
    border-width: 5px;
    border-style: solid;
    border-color: black transparent transparent transparent;
}

.spinner {
  margin: 100px auto 0;
  width: 70px;
  text-align: center;
}

.spinner > div {
  width: 18px;
  height: 18px;
  background-color: #000;

  border-radius: 100%;
  display: inline-block;
  -webkit-animation: sk-bouncedelay 1.4s infinite ease-in-out both;
  animation: sk-bouncedelay 1.4s infinite ease-in-out both;
}

.spinner .bounce1 {
  -webkit-animation-delay: -0.32s;
  animation-delay: -0.32s;
}

.spinner .bounce2 {
  -webkit-animation-delay: -0.16s;
  animation-delay: -0.16s;
}

@-webkit-keyframes sk-bouncedelay {
  0%, 80%, 100% { -webkit-transform: scale(0) }
  40% { -webkit-transform: scale(1.0) }
}

@keyframes sk-bouncedelay {
  0%, 80%, 100% { 
    -webkit-transform: scale(0);
    transform: scale(0);
  } 40% { 
    -webkit-transform: scale(1.0);
    transform: scale(1.0);
  }
}

